; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_ArrayConstr_isArray.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_array.c_ArrayConstr_isArray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@JSCLASS_ARRAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32*, i32*)* @ArrayConstr_isArray to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ArrayConstr_isArray(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* %11, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %6
  %19 = load i32*, i32** %12, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @is_object_instance(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %33, label %24

24:                                               ; preds = %18, %6
  %25 = load i32*, i32** %13, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %27, label %31

27:                                               ; preds = %24
  %28 = load i32, i32* @FALSE, align 4
  %29 = call i32 @jsval_bool(i32 %28)
  %30 = load i32*, i32** %13, align 8
  store i32 %29, i32* %30, align 4
  br label %31

31:                                               ; preds = %27, %24
  %32 = load i32, i32* @S_OK, align 4
  store i32 %32, i32* %7, align 4
  br label %62

33:                                               ; preds = %18
  %34 = load i32*, i32** %12, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @get_object(i32 %36)
  %38 = call i32* @iface_to_jsdisp(i32 %37)
  store i32* %38, i32** %14, align 8
  %39 = load i32*, i32** %13, align 8
  %40 = icmp ne i32* %39, null
  br i1 %40, label %41, label %54

41:                                               ; preds = %33
  %42 = load i32*, i32** %14, align 8
  %43 = icmp ne i32* %42, null
  br i1 %43, label %44, label %49

44:                                               ; preds = %41
  %45 = load i32*, i32** %14, align 8
  %46 = load i32, i32* @JSCLASS_ARRAY, align 4
  %47 = call i64 @is_class(i32* %45, i32 %46)
  %48 = icmp ne i64 %47, 0
  br label %49

49:                                               ; preds = %44, %41
  %50 = phi i1 [ false, %41 ], [ %48, %44 ]
  %51 = zext i1 %50 to i32
  %52 = call i32 @jsval_bool(i32 %51)
  %53 = load i32*, i32** %13, align 8
  store i32 %52, i32* %53, align 4
  br label %54

54:                                               ; preds = %49, %33
  %55 = load i32*, i32** %14, align 8
  %56 = icmp ne i32* %55, null
  br i1 %56, label %57, label %60

57:                                               ; preds = %54
  %58 = load i32*, i32** %14, align 8
  %59 = call i32 @jsdisp_release(i32* %58)
  br label %60

60:                                               ; preds = %57, %54
  %61 = load i32, i32* @S_OK, align 4
  store i32 %61, i32* %7, align 4
  br label %62

62:                                               ; preds = %60, %31
  %63 = load i32, i32* %7, align 4
  ret i32 %63
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local i32 @is_object_instance(i32) #1

declare dso_local i32 @jsval_bool(i32) #1

declare dso_local i32* @iface_to_jsdisp(i32) #1

declare dso_local i32 @get_object(i32) #1

declare dso_local i64 @is_class(i32*, i32) #1

declare dso_local i32 @jsdisp_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
